--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -7618,31 +7618,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "################################################    Declare columns to delete    #################################################\n",
-    "# Global lists of columns to be dropped (default)\n",
-    "car_identifiers = ['Ve', 'Va', 'T', 'Tan', 'ID', 'tvv']\n",
-    "administrative_values = ['Date of registration', 'Status', 'Dr', 'Vf', 'De']\n",
-    "data_related_columns = ['r', 'R', 'Version_file']   #'#identical occurences'\n",
-    "brand_related = ['Mp', 'Man', 'MMS']\n",
-    "temporary_or_transformed = ['IT', 'IT_valid', 'IT_invalid', 'Ernedc (g/km)', 'Non_Electric_Car']\n",
-    "correlated_with_target = ['Enedc (g/km)', 'Fuel consumption ', 'Erwltp (g/km)', 'E (g/km)', 'Er (g/km)'] \n",
-    "collinear_attributes = ['m (kg)', 'At2 (mm)']\n",
-    "others = ['Cr', 'ech', 'RLFI', 'Electric range (km)', 'z (Wh/km)', 'year']\n",
-    "\n",
-    "# Additional columns to be dropped (individual)\n",
-    "individual = ['Mk', 'Country', 'Cn', 'VFN']\n",
-    "\n",
-    "# Combine all columns into one list\n",
-    "list_of_columns_to_drop = (car_identifiers + administrative_values + data_related_columns \n",
-    "                           + brand_related + correlated_with_target + temporary_or_transformed \n",
-    "                           + collinear_attributes + others + individual)\n",
+    "# Define the dictionary of columns to drop\n",
+    "columns_to_drop_dict = {\n",
+    "    # Global lists of columns to be dropped (default)\n",
+    "    \"Car Identifiers\":          ['Ve', 'Va', 'T', 'Tan', 'ID', 'tvv'],\n",
+    "    \"Administrative Values\":    ['Date of registration', 'Status', 'Dr', 'Vf', 'De'],\n",
+    "    \"Data Related Columns\":     ['r', 'R', 'Version_file'],\n",
+    "    \"Brand Related\":            ['Mp', 'Man', 'MMS'],\n",
+    "    \"Temporary or Transformed\": ['IT', 'IT_valid', 'IT_invalid', 'Non_Electric_Car'],\n",
+    "    \"Target Redundant\":         ['Enedc (g/km)', 'Fuel consumption', 'Erwltp (g/km)', \n",
+    "                                'Ernedc (g/km)', 'E (g/km)', 'Er (g/km)'],\n",
+    "    \"Collinear Attributes\":     ['m (kg)', 'At2 (mm)'],\n",
+    "    \"Other Columns\":            ['Cr', 'ech', 'RLFI', 'Electric range (km)', 'z (Wh/km)', 'year'],\n",
+    "    # Additional columns to be dropped (individual)\n",
+    "    \"Individual Columns\":       ['Mk', 'Country', 'Cn', 'VFN']\n",
+    "}\n",
     "##################################################################################################################################\n",
     "\n",
-    "################################################    Declare columns as gaussian for outlier handling    ##########################\n",
+    "######################################   Declare columns as gaussian for outlier handling    #####################################\n",
     "# Declare gaussian and non gaussian distributed columns\n",
     "gaussian_cols = ['m (kg)', 'Mt',  'W (mm)', 'At1 (mm)', 'At2 (mm)']\n",
     "non_gaussian_cols = [ 'ec (cm3)', 'ep (KW)', 'Ewltp (g/km)']\n",
@@ -7651,19 +7649,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dropped all but top 3 countries (DE, FR, IT)\n",
-      "Dropped columns: ['Ve', 'Va', 'T', 'Tan', 'ID', 'tvv', 'Date of registration', 'Status', 'Vf', 'De', 'r', 'Mp', 'Man', 'MMS', 'Enedc (g/km)', 'Fuel consumption ', 'Erwltp (g/km)', 'IT', 'IT_valid', 'IT_invalid', 'Ernedc (g/km)', 'Non_Electric_Car', 'm (kg)', 'At2 (mm)', 'Cr', 'ech', 'RLFI', 'Electric range (km)', 'z (Wh/km)', 'year', 'Mk', 'Country', 'Cn', 'VFN']\n",
-      "Index(['Mh', 'Ct', 'Mt', 'Ewltp (g/km)', 'W (mm)', 'At1 (mm)', 'Ft', 'Fm',\n",
-      "       'ec (cm3)', 'ep (KW)', '#identical occurences', 'IT_1', 'IT_2', 'IT_3',\n",
-      "       'IT_4', 'IT_5', 'Area (m2)'],\n",
-      "      dtype='object')\n",
+      "Dropped all rows without the target variable.\n",
+      "Dropped all electric cars.\n",
+      "Calculated attribute 'Area (m2)'.\n",
+      "Dropped all years prior to 2019.\n",
+      "Dropped all but top 3 countries (DE, FR, IT).\n",
+      "Columns \"Car Identifiers\" have been dropped: ['Ve', 'Va', 'T', 'Tan', 'ID', 'tvv']\n",
+      "Columns \"Administrative Values\" have been dropped: ['Date of registration', 'Status', 'Vf', 'De']\n",
+      "Columns \"Data Related Columns\" have been dropped: ['r']\n",
+      "Columns \"Brand Related\" have been dropped: ['Mp', 'Man', 'MMS']\n",
+      "Columns \"Temporary or Transformed\" have been dropped: ['IT', 'IT_valid', 'IT_invalid', 'Non_Electric_Car']\n",
+      "Columns \"Target Redundant\" have been dropped: ['Enedc (g/km)', 'Fuel consumption ', 'Erwltp (g/km)', 'Ernedc (g/km)']\n",
+      "Columns \"Collinear Attributes\" have been dropped: ['m (kg)', 'At2 (mm)']\n",
+      "Columns \"Other Columns\" have been dropped: ['Cr', 'ech', 'RLFI', 'Electric range (km)', 'z (Wh/km)', 'year']\n",
+      "Columns \"Individual Columns\" have been dropped: ['Mk', 'Country', 'Cn', 'VFN']\n",
+      "\n",
+      "Columns now present in the DataFrame: ['Mh', 'Ct', 'Mt', 'Ewltp (g/km)', 'W (mm)', 'At1 (mm)', 'Ft', 'Fm', 'ec (cm3)', 'ep (KW)', '#identical occurences', 'IT_1', 'IT_2', 'IT_3', 'IT_4', 'IT_5', 'Area (m2)']\n",
       "Warning: The following columns are not in the DataFrame and will be skipped: ['m (kg)', 'At2 (mm)']\n",
       "Replaced 123267 outliers in column 'Mt' with median value 1733.0.\n",
       "Replaced 142114 outliers in column 'W (mm)' with median value 2710.0.\n",
@@ -7680,7 +7688,7 @@
     "\n",
     "# Drop rows where 'Ewltp (g/km)' is NaN\n",
     "df = drop_rows_without_target(df, target='Ewltp (g/km)')\n",
-    "print(\"Dropped all rows without the target variable\")\n",
+    "print(\"Dropped all rows without the target variable.\")\n",
     "\n",
     "# Make electric car column and replace nans with 0s in electric range&capacity column\n",
     "df = process_electric_car_data(df, replace_nan=False, make_electric_car_column=True)\n",
@@ -7690,7 +7698,7 @@
     "\n",
     "# Calculate new attribute \"Area (m2)\"\n",
     "df['Area (m2)'] = (df['W (mm)'] * ((df['At1 (mm)'] + df['At2 (mm)'])/2)) / 1000000\n",
-    "Print(\"Calculated attribute 'Area (m2)'\")\n",
+    "print(\"Calculated attribute 'Area (m2)'.\")\n",
     "\n",
     "# Filter data frame for cars and entries which are younger than 2019\n",
     "df = filter_dataframe_by_year(df, year=2019)\n",
@@ -7698,10 +7706,10 @@
     "\n",
     "# Drop everything except top 3 countries\n",
     "df = df[df['Country'].isin(['DE', 'FR', 'IT'])]\n",
-    "print(\"Dropped all but top 3 countries (DE, FR, IT)\")\n",
+    "print(\"Dropped all but top 3 countries (DE, FR, IT).\")\n",
     "\n",
     "# Drop columns as specified\n",
-    "df = drop_irrelevant_columns(df, list_of_columns_to_drop)\n",
+    "df = drop_irrelevant_columns(df, columns_to_drop_dict)\n",
     "\n",
     "# Outlier handling\n",
     "# Replacement with median for gaussian like numerical distributions\n",
@@ -8084,7 +8092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -8092,10 +8100,25 @@
      "output_type": "stream",
      "text": [
       "nan_handling_strategy = {\n",
+      "    'ID': 'drop',\n",
+      "    'Country': 'drop',\n",
+      "    'VFN': 'drop',\n",
+      "    'Mp': 'drop',\n",
       "    'Mh': 'drop',\n",
+      "    'Man': 'drop',\n",
+      "    'MMS': 'drop',\n",
+      "    'Tan': 'drop',\n",
+      "    'T': 'drop',\n",
+      "    'Va': 'drop',\n",
+      "    'Ve': 'drop',\n",
+      "    'Mk': 'drop',\n",
+      "    'Cn': 'drop',\n",
       "    'Ct': 'drop',\n",
+      "    'Cr': 'drop',\n",
+      "    'r': 'drop',\n",
       "    'm (kg)': 'drop',\n",
       "    'Mt': 'drop',\n",
+      "    'Enedc (g/km)': 'drop',\n",
       "    'Ewltp (g/km)': 'drop',\n",
       "    'W (mm)': 'drop',\n",
       "    'At1 (mm)': 'drop',\n",
@@ -8104,8 +8127,23 @@
       "    'Fm': 'drop',\n",
       "    'ec (cm3)': 'drop',\n",
       "    'ep (KW)': 'drop',\n",
+      "    'z (Wh/km)': 'drop',\n",
+      "    'IT': 'drop',\n",
+      "    'Ernedc (g/km)': 'drop',\n",
+      "    'Erwltp (g/km)': 'drop',\n",
+      "    'De': 'drop',\n",
+      "    'Vf': 'drop',\n",
+      "    'Status': 'drop',\n",
+      "    'year': 'drop',\n",
+      "    'Date of registration': 'drop',\n",
       "    'Fuel consumption ': 'drop',\n",
+      "    'ech': 'drop',\n",
+      "    'RLFI': 'drop',\n",
+      "    'Electric range (km)': 'drop',\n",
       "    '#identical occurences': 'drop',\n",
+      "    'tvv': 'drop',\n",
+      "    'IT_valid': 'leave_as_nan',\n",
+      "    'IT_invalid': 'leave_as_nan',\n",
       "    'IT_1': 'leave_as_nan',\n",
       "    'IT_2': 'leave_as_nan',\n",
       "    'IT_3': 'leave_as_nan',\n",
