--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -15800,32 +15800,7 @@
     "#0  Unweighted Linear Regression  127.388712  128.194092   0.890791  0.890157\n",
     "#1    Weighted Linear Regression  109.254319  110.488674   0.871988  0.866759\n",
     "#2        Unweighted Elastic Net  127.679066  128.457784   0.890542  0.889931\n",
-    "#3          Weighted Elastic Net  109.529577  110.636856   0.871666  0.866581\n",
-    "\n",
-    "Model Performance Comparison:\n",
-    "                          Model Train MSE \n",
-    "0  Unweighted Linear Regression 127.408491   \n",
-    "1    Weighted Linear Regression 109.754706   \n",
-    "2        Unweighted Elastic Net 127.688734   \n",
-    "3          Weighted Elastic Net  10.057695   \n",
-    "\n",
-    "   Test MSE (Unweighted)  Train R^2 (Unweighted)  Test R^2 (Unweighted)  \\\n",
-    "0             128.208780                0.890774               0.890144   \n",
-    "1             111.500399                0.871402               0.865539   \n",
-    "2             128.468149                0.890533               0.889922   \n",
-    "3             111.592515                0.871047               0.865428   \n",
-    "\n",
-    "   Train MSE (Weighted)  Test MSE (Weighted)  Train R^2 (Weighted)  \\\n",
-    "0            124.815604           127.694640              0.853755   \n",
-    "1            109.754706           111.500399              0.871402   \n",
-    "2            124.235709           127.268692              0.854435   \n",
-    "3            110.057695           111.592515              0.871047   \n",
-    "\n",
-    "   Test R^2 (Weighted)  \n",
-    "0             0.846010  \n",
-    "1             0.865539  \n",
-    "2             0.846524  \n",
-    "3             0.865428 "
+    "#3          Weighted Elastic Net  109.529577  110.636856   0.871666  0.866581"
    ]
   },
   {
