--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -14243,14 +14243,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df = df.drop(columns=['m (kg)','Fuel consumption '])\n",
-    "df = df.drop(columns=['m (kg)'])\n",
-    "df['Area (m2)'] = (df['W (mm)'] * ((df['At1 (mm)'] + df['At2 (mm)'])/2)) / 1000000\n",
-    "df = df.drop(columns=['W (mm)', 'At1 (mm)', 'At2 (mm)'])"
+    "# drop W (mm) as it is highly collinear\n",
+    "df = df.drop(columns=['W (mm)'])"
    ]
   },
   {
