Data comparison code added

--- a/notebooks/DataPipeline3_only models2_newset.ipynb
+++ b/notebooks/DataPipeline3_only models2_newset.ipynb
@@ -1005,7 +1005,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Comparison - in progress"
+    "# Model Comparison"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Libraries and Load Dataset"
    ]
   },
   {
@@ -1013,21 +1020,126 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import standard libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import time  # To measure training time for each model\n",
+    "\n",
+    "# Import libraries for the modeling\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.linear_model import ElasticNetCV\n",
+    "import xgboost as xgb\n",
+    "\n",
+    "# TensorFlow for DNN\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Dropout, Input\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "\n",
+    "# Load data\n",
+    "df = pd.read_parquet(r'C:\\Users\\alexa\\Downloads\\ProjectCO2--no Github\\Data\\minimal_withoutfc_dupesdropped_frequencies_area_outliers3.0_tn20_mcp00.10.parquet')\n",
+    "df = df.drop(columns=['W (mm)'])  # Removing given collinearity"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Step 1: Split data into features and target\n",
+    "target_column = 'Ewltp (g/km)'  # Target column\n",
+    "X = df.drop(columns=[target_column])  # Features\n",
+    "y = df[target_column]  # Target variable\n",
+    "\n",
+    "# Step 2: Train-test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Step 3: Scale numerical features\n",
+    "scaler_X = StandardScaler()\n",
+    "X_train_scaled = scaler_X.fit_transform(X_train)\n",
+    "X_test_scaled = scaler_X.transform(X_test)\n",
+    "\n",
+    "# Scaling the target variable as well (optional but can be helpful)\n",
+    "scaler_y = StandardScaler()\n",
+    "y_train_scaled = scaler_y.fit_transform(y_train.values.reshape(-1, 1)).flatten()\n",
+    "y_test_scaled = scaler_y.transform(y_test.values.reshape(-1, 1)).flatten()\n",
+    "\n",
+    "# Instantiate models\n",
+    "LR_model = ElasticNetCV(cv=5, l1_ratio=[0.1, 0.5, 0.9], random_state=42)\n",
+    "XG_model = xgb.XGBRegressor(colsample_bytree=1.0, learning_rate=0.2, max_depth=7, n_estimators=150, subsample=1.0, random_state=42) # using best parameters found\n",
+    "\n",
+    "# DNN model setup\n",
+    "X_train_partial, X_val, y_train_partial, y_val = train_test_split(\n",
+    "    X_train_scaled, y_train_scaled, test_size=0.2, random_state=42)\n",
+    "\n",
+    "DNN_model = Sequential([\n",
+    "    Input(shape=(X_train_scaled.shape[1],)),  # Explicitly define the input shape\n",
+    "    Dense(64, activation='relu'),\n",
+    "    Dropout(0.2),  # Dropout layer to reduce overfitting\n",
+    "    Dense(64, activation='relu'),\n",
+    "    Dropout(0.2),\n",
+    "    Dense(32, activation='relu'),\n",
+    "    Dense(1)  # Output layer with one neuron for regression output\n",
+    "])\n",
+    "\n",
+    "DNN_model.compile(optimizer=Adam(learning_rate=0.001), loss='mse', metrics=['mse'])\n",
+    "early_stopping = EarlyStopping(\n",
+    "    monitor='val_loss', patience=5, restore_best_weights=True, verbose=1\n",
+    ")\n",
+    "\n",
+    "history = DNN_model.fit(\n",
+    "    X_train_partial, y_train_partial,\n",
+    "    validation_data=(X_val, y_val),\n",
+    "    epochs=20,              # Reduced epochs to help manage memory usage\n",
+    "    batch_size=16,          # Smaller batch size to help manage memory usage\n",
+    "    callbacks=[early_stopping],  # Early stopping to prevent overfitting\n",
+    "    verbose=1\n",
+    ")\n",
+    "\n",
+    "# List of models to evaluate\n",
+    "models = {\n",
+    "    'Linear Regression': LR_model,\n",
+    "    'XGBoost': XG_model,\n",
+    "    'Dense Neural Network': DNN_model  # Including DNN as a separate case\n",
+    "}\n",
+    "\n",
+    "# Store results\n",
+    "results = {}\n",
+    "\n",
+    "for name, model in models.items():\n",
+    "    start_time = time.time()  # Track time\n",
+    "    \n",
+    "    # Special handling for DNN model as it requires scaled targets\n",
+    "    if name == 'Dense Neural Network':\n",
+    "        y_pred = DNN_model.predict(X_test_scaled).flatten()\n",
+    "        mse = mean_squared_error(y_test_scaled, y_pred)\n",
+    "        r2 = r2_score(y_test_scaled, y_pred)\n",
+    "        # Cross-validation may not be directly compatible with DNNs; skipping for this model\n",
+    "        cv_r2 = 'N/A'\n",
+    "    else:\n",
+    "        model.fit(X_train_scaled, y_train_scaled)\n",
+    "        y_pred = model.predict(X_test_scaled)\n",
+    "        mse = mean_squared_error(y_test_scaled, y_pred)\n",
+    "        r2 = r2_score(y_test_scaled, y_pred)\n",
+    "        cv_r2 = cross_val_score(model, X_train_scaled, y_train_scaled, cv=5, scoring='r2').mean()\n",
+    "\n",
+    "    # Store results\n",
+    "    results[name] = {\n",
+    "        'Test MSE': mse,\n",
+    "        'Test R-squared': r2,\n",
+    "        'Cross-validated R-squared': cv_r2,\n",
+    "        'Training Time (seconds)': time.time() - start_time\n",
+    "    }\n",
+    "\n",
+    "# Compare results\n",
+    "comparison_df = pd.DataFrame(results).T\n",
+    "print(comparison_df)"
+   ]
   }
  ],
  "metadata": {
