Vergleichscode run mit neuem Dataset

--- a/notebooks/DataPipeline3_only models2_newset.ipynb
+++ b/notebooks/DataPipeline3_only models2_newset.ipynb
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,31 @@
       "Epoch 4/20\n",
       "\u001b[1m80018/80018\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m144s\u001b[0m 1ms/step - loss: 0.0563 - mse: 0.0563 - val_loss: 0.0664 - val_mse: 0.0664\n",
       "Epoch 5/20\n",
-      "\u001b[1m79977/80018\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 1ms/step - loss: 0.0556 - mse: 0.0556"
+      "\u001b[1m80018/80018\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m101s\u001b[0m 1ms/step - loss: 0.0556 - mse: 0.0556 - val_loss: 0.0743 - val_mse: 0.0743\n",
+      "Epoch 6/20\n",
+      "\u001b[1m80018/80018\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m105s\u001b[0m 1ms/step - loss: 0.0543 - mse: 0.0543 - val_loss: 0.0622 - val_mse: 0.0622\n",
+      "Epoch 7/20\n",
+      "\u001b[1m80018/80018\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m102s\u001b[0m 1ms/step - loss: 0.0536 - mse: 0.0536 - val_loss: 0.0636 - val_mse: 0.0636\n",
+      "Epoch 8/20\n",
+      "\u001b[1m80018/80018\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m150s\u001b[0m 1ms/step - loss: 0.0531 - mse: 0.0531 - val_loss: 0.0623 - val_mse: 0.0623\n",
+      "Epoch 9/20\n",
+      "\u001b[1m80018/80018\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m139s\u001b[0m 1ms/step - loss: 0.0528 - mse: 0.0528 - val_loss: 0.0749 - val_mse: 0.0749\n",
+      "Epoch 10/20\n",
+      "\u001b[1m80018/80018\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m106s\u001b[0m 1ms/step - loss: 0.0525 - mse: 0.0525 - val_loss: 0.0646 - val_mse: 0.0646\n",
+      "Epoch 11/20\n",
+      "\u001b[1m80018/80018\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m104s\u001b[0m 1ms/step - loss: 0.0525 - mse: 0.0525 - val_loss: 0.0648 - val_mse: 0.0648\n",
+      "Epoch 11: early stopping\n",
+      "Restoring model weights from the end of the best epoch: 6.\n",
+      "\u001b[1m12503/12503\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 834us/step\n",
+      "                      Test MSE Test R-squared Cross-validated R-squared  \\\n",
+      "Linear Regression     0.126959       0.873043                  0.873155   \n",
+      "XGBoost               0.026375       0.973626                  0.973652   \n",
+      "Dense Neural Network  0.061685       0.938316                       N/A   \n",
+      "\n",
+      "                     Training Time (seconds)  \n",
+      "Linear Regression                 424.032421  \n",
+      "XGBoost                             84.45307  \n",
+      "Dense Neural Network               15.742555  \n"
      ]
     }
    ],
