relabeling the model notebook

--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -25,6 +25,30 @@
     "1. Main data pipeline\n",
     "Treat data to reach a point were we have the data frame ready for the separate treatments for classification and regression treatment\n",
     "\n",
+    "\n",
+    "\n",
+    "All functions can be seen with description in the utils_co2.py function conglomeration\n",
+    "This will be done in the summary of data treatment\n",
+    "- taking the dataframe coming from renaming/mapping categories above\n",
+    "- drop rows without target values\n",
+    "- declare and drop irrelevant columns\n",
+    "- filter df by year (default everything after 2018)\n",
+    "+ Identify electric cars\n",
+    "+ identify electric (or hybrid) cars by looking at electric range and electric capacity\n",
+    "+ making separate column whichs marks the non electric cars\n",
+    "+ fill then all the nan values in electri range and electric capacity with 0 (because they have non, which is equal to 0)\n",
+    "- Outlier handling\n",
+    "- Outlier handling function (IQR factor ab dem als Outlier gewertet wird)\n",
+    "- Zusätzlich in die Funktion: ersetzen durch median oder row delete\n",
+    "+ give to the next steps\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "* 1.A: Omitting / deleting of variables which have no meaning for the model (explain why)\n",
     "* 1.B: Omitting / deleting car identifiers because they are not relevant for the model\n",
     "* 1.C: Omitting data before a certain year (explain why)\n",
@@ -213,18 +237,6 @@
    },
    "source": [
     "# 1. Main data pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "mA4cdsCQ26yi"
-   },
-   "outputs": [],
-   "source": [
-    "# Missing the preprocessing work from andreas\n",
-    "Andreas vorschritte von daten satz wie es von der EU seite kommt -> parquet file"
    ]
   },
   {
